--- a/src/components/blog/Hero.astro
+++ b/src/components/blog/Hero.astro
@@ -11,7 +11,7 @@ const {
 	content: { data, render },
 } = Astro.props;
 
-// const { remarkPluginFrontmatter } = await render();
+const { remarkPluginFrontmatter } = await render();
 
 const dateTimeOptions: Intl.DateTimeFormatOptions = {
 	month: "long",
@@ -38,8 +38,10 @@ const dateTimeOptions: Intl.DateTimeFormatOptions = {
 <div class="flex flex-wrap items-center gap-x-3 gap-y-2">
 	<p class="font-semibold">
 		<FormattedDate date={data.publishDate} dateTimeOptions={dateTimeOptions} />
-		<!-- /{" "}
-		{remarkPluginFrontmatter.minutesRead} -->
+		<p class="hidden">
+			/{" "}
+			{remarkPluginFrontmatter.minutesRead}
+		</p>
 	</p>
 	{
 		data.updatedDate && (
